# tooldaq-template

./: .gitignore  CMakeLists.txt  GetToolDAQ.sh  Makefile  README.md  setup.sh
DataModel/: DataModel.h
UserTools/: Unity.h  newTool.sh
UserTools/Factory/: Factory.cpp  Factory.h
UserTools/MyFirstTool/: MyFirstTool.cpp  MyFirstTool.h
UserTools/SlowControl/: SlowControl.cpp  SlowControl.h
configfiles/: SlowControlConfig
configfiles/Dummy/: ToolsConfig
configfiles/MyToolChain/: ToolChainConfig  ToolsConfig
src/: main.cpp
